# bare-metal-manager-core

./: .dockerignore  .envrc  .gitignore  .gitmodules  .local_envrc.example  .protolint.yaml  .taplo.toml  Cargo.toml  Cross.toml  LICENSE  Makefile-build.toml  Makefile-package.toml  Makefile.toml  README.md  THIRD-PARTY-LICENSES  clippy.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  skaffold.yml
crates/admin-cli/: Cargo.toml  DEVELOPMENT.md  build.rs
crates/admin-cli/src/: async_write.rs  main.rs  metadata.rs  rack_firmware.rs  rpc.rs
crates/api-db/: Cargo.toml  build.rs
crates/api-db/migrations/: 20211119192131_initial.sql  20220524042504_bg.sql  20221103120000_instance_network_config.sql  20221107043732_add_vlanid_nw_prefix.sql  20221107190608_remove_unique_constraint_on_names.sql  20221108082344_dpu_machines.sql  20221114120000_instance_network_status_observation.sql  20221117080928_remove_managed_resource.sql  20221117090735_add_circuit_id.sql  20221122062942_instance_addresses.sql  20221123120000_instance_add_tenant_org.sql  20221212120000_network_segment_controller_state.sql  20221213080900_cleanup_machine_function.sql  20230104052648_remove_vpc_resource_state.sql  20230112140927_machine_statemachine.sql  20230119053148_statemachine_handler.sql  20230126120000_update_cleanup_machine_function.sql  20230131120000_machine_add_stable_id.sql  20230206085013_state_history.sql  20230213120000_update_cleanup_machine_function.sql  20230224120000_network_segment_state_history.sql  20230306060616_machine_history_remove_foreign_key.sql  20230308160000_machine_network_status_observation.sql  20230315120000_stable_machine_id_only.sql  20230317103549_machine_default_state.sql  20230324140000_dpu_loopback_ip_and_resource_pool.sql  20230331112432_add_tenant_keysets.sql  20230424120000_fix_cleanup_machine_by_id.sql  20230425160000_machine_network_config.sql  20230428140000_resource_pool_drop_owner.sql  20230502045735_network_segment_type.sql  20230505055555_update_machines_network_config.sql  20230509120000_ib_subnet.sql  20230510055134_machine_id_cascade.sql  20230512171432_bmc_info.sql  20230518025702_host_machine_view.sql  20230519010203_loopback_in_machines.sql  20230522151617_resource_pool_type.sql  20230613000000_ib_subnet_pkey.sql  20230622040906_dns_view.sql  (+218 more)
crates/api-db/src/: bmc_metadata.rs  carbide_version.rs  desired_firmware.rs  dhcp_entry.rs  dhcp_record.rs  dpa_interface.rs  dpa_interface_state_history.rs  dpu_agent_upgrade_policy.rs  dpu_machine_update.rs  dpu_remediation.rs  expected_machine.rs  expected_power_shelf.rs  expected_switch.rs  explored_endpoints.rs  explored_managed_host.rs  extension_service.rs  host_machine_update.rs  ib_partition.rs  instance.rs  instance_address.rs  instance_network_config.rs  instance_type.rs  ip_allocator.rs  lib.rs  machine.rs  machine_boot_override.rs  machine_health_history.rs  machine_interface.rs  machine_interface_address.rs  machine_state_history.rs  machine_topology.rs  machine_validation.rs  machine_validation_config.rs  machine_validation_result.rs  machine_validation_suites.rs  managed_host.rs  network_devices.rs  network_prefix.rs  network_security_group.rs  network_segment.rs  (+28 more)
crates/api-integration-tests/: Cargo.toml
crates/api-integration-tests/tests/: lib.rs
crates/api-test-helper/: Cargo.toml
crates/api-test-helper/src/: api_server.rs  domain.rs  grpcurl.rs  instance.rs  lib.rs  machine.rs  machine_a_tron.rs  metrics.rs  subnet.rs  tenant.rs  utils.rs  vault.rs  vpc.rs
crates/bmc-mock/: Cargo.toml  tls.crt  tls.key
crates/bmc-mock/src/: bmc_state.rs  bug.rs  command_line.rs  json.rs  lib.rs  machine_info.rs  main.rs  middleware_router.rs  mock_machine_router.rs  redfish_expander.rs  tar_router.rs
crates/certs/: Cargo.toml
crates/certs/src/: cert_renewal.rs  lib.rs
crates/config-version/: Cargo.toml
crates/config-version/src/: lib.rs
crates/dhcp-server/: Cargo.toml  Makefile.toml
crates/dhcp-server/conf/: conf.yaml
crates/dhcp-server/src/: cache.rs  command_line.rs  errors.rs  main.rs  packet_handler.rs  vendor_class.rs
crates/dhcp-server/test/: host_config.yaml  host_config_localtest.yaml
crates/dns/: Cargo.toml  Dockerfile
crates/dns-record/: Cargo.toml
crates/dns-record/src/: constants.rs  lib.rs
crates/dns/src/: config.rs  lib.rs  main.rs
crates/dpu-agent-utils/: Cargo.toml
crates/dpu-agent-utils/src/: lib.rs  utils.rs
crates/dpu-remediation/: Cargo.toml
crates/dpu-remediation/src/: lib.rs  remediation.rs
crates/health-report/: Cargo.toml
crates/health-report/src/: lib.rs
crates/host-support/: Cargo.toml
crates/host-support/src/: agent_config.rs  dpa_cmds.rs  hardware_enumeration.rs  lib.rs  registration.rs
crates/host-support/test/: bmc_info.txt  flint_query.txt  lan_print.txt  lldp_query.json  test_user_list_2.csv  user_list.csv
crates/http-connector/: Cargo.toml
crates/http-connector/src/: connector.rs  lib.rs  resolver.rs
crates/libnmxm/: Cargo.toml
crates/libnmxm/src/: lib.rs  nmxm_api.rs  nmxm_model.rs
crates/libnmxm/tests/: Cargo.toml  README.md
crates/log-parser/: Cargo.toml
crates/log-parser/src/: carbide_reporting.rs  main.rs
crates/logfmt/: Cargo.toml
crates/logfmt/src/: lib.rs
crates/machine-a-tron/: Cargo.toml  README.md
crates/machine-a-tron/config/: mac.toml  mat.toml
crates/machine-a-tron/src/: api_client.rs  api_throttler.rs  bmc_mock_wrapper.rs  config.rs  dhcp_wrapper.rs  dpu_machine.rs  host_machine.rs  lib.rs  machine_a_tron.rs  machine_state_machine.rs  machine_utils.rs  main.rs  mock_ssh_server.rs  subnet.rs  (+4 more)
crates/machine-validation/: Cargo.toml
crates/macros/: Cargo.toml
crates/measured-boot/: Cargo.toml  README.md
crates/metrics-endpoint/: Cargo.toml
crates/mlxconfig-device/: Cargo.toml
crates/mlxconfig-embedded/: Cargo.toml  README.md
crates/mlxconfig-lockdown/: Cargo.toml
crates/mlxconfig-profile/: Cargo.toml  README.md
crates/mlxconfig-registry/: Cargo.toml  README.md  build.rs
crates/mlxconfig-runner/: Cargo.toml  README.md
crates/mlxconfig-variables/: Cargo.toml  README.md
(+1711 files in other folders)
