[package]
name = "carbide-admin-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-admin-cli
name = "carbide-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
carbide-network = { path = "../network" }
carbide-ssh = { path = "../ssh" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-version = { path = "../version" }
carbide-secrets = { path = "../secrets" }
carbide-health-report = { path = "../health-report" }
carbide-measured-boot = { path = "../measured-boot", features = ["cli"] }
carbide-mlxconfig-device = { path = "../mlxconfig-device" }
carbide-mlxconfig-lockdown = { path = "../mlxconfig-lockdown" }
carbide-mlxconfig-profile = { path = "../mlxconfig-profile" }
carbide-mlxconfig-runner = { path = "../mlxconfig-runner" }
carbide-mlxconfig-variables = { path = "../mlxconfig-variables" }
carbide-rpc = { path = "../rpc", features = ["cli"] }
carbide-utils = { path = "../utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
prettytable-rs = { workspace = true }
reqwest = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
urlencoding = { workspace = true }
version-compare = { workspace = true }
uuid = { workspace = true }
x509-parser = { features = ["validate"], workspace = true }
zip = { workspace = true }

[build-dependencies]
clap = { workspace = true }
carbide-version = { path = "../version" }

[lints]
workspace = true
