[package]
name = "carbide-api-db"
version = "0.0.0"
edition.workspace = true
description = "Database functions for carbide-api"
license.workspace = true
authors.workspace = true

[lib]
name = "db"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
config-version = { path = "../config-version", features = ["sqlx"] }
carbide-host-support = { path = "../host-support", default-features = false }
carbide-network = { path = "../network", features = ["sqlx"] }
carbide-version = { path = "../version" }
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc", features = ["sqlx"] }
carbide-utils = { path = "../utils", features = ["sqlx"] }
carbide-uuid = { path = "../uuid", features = ["sqlx"] }
carbide-measured-boot = { path = "../measured-boot", features = ["sqlx"] }
dns-record = { path = "../dns-record" }
carbide-api-model = { path = "../api-model", default-features = false }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
names = { default-features = false, workspace = true }
octseq = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tss-esapi = { optional = true, workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
hickory-proto = { workspace = true }
version-compare = { workspace = true }
#these are alphabetized

[features]
default = ["linux-build"]
linux-build = [
  "tss-esapi",
  "carbide-sqlx-testing/linux-build",
  "carbide-host-support/linux-build",
  "carbide-api-model/linux-build",
]

[build-dependencies]
carbide-version = { path = "../version" }

[dev-dependencies]
lazy_static = { workspace = true }
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing", default-features = false }
tracing-subscriber = { workspace = true }
ctor = { workspace = true }

[lints]
workspace = true
