[package]
name = "config-version"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
], optional = true }
thiserror = { workspace = true }

[lints]
workspace = true
