[package]
name = "dns-record"
version = "0.1.0"
edition.workspace = true
description = "Common DNS library"
license.workspace = true
authors.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
assert-json-diff = { workspace = true }
