[package]
name = "carbide-dns"
version = "0.0.1"
description = "Carbide is bare metal provisioning system with auto-discovery and API based machine manipulation"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-dns"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
  "json",
], workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { workspace = true }
trust-dns-server = { workspace = true }
trust-dns-resolver = { workspace = true }

# [local-dependencies]
dns-record = { path = "../dns-record" }
carbide-host-support = { path = "../host-support" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
local-ip-address = { workspace = true }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
carbide-rpc = { path = "../rpc" }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
