[package]
name = "carbide-dpu-remediation"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# TODO: rename to carbide_dpu_remediation in source
name = "forge_dpu_remediation"

[dependencies]
eyre = { workspace = true }
rand = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# [local-dependencies]
carbide-dpu-agent-utils = { path = "../dpu-agent-utils" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-rpc = { path = "../rpc" }
