[package]
name = "libnmxm"
version = "0.1.0"
edition.workspace = true
exclude = ["/tests"]
license.workspace = true
authors.workspace = true

[lib]
name = "libnmxm"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
serde_derive = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "socks",
  "cookies",
] }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
getopts = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
