[package]
name = "logfmt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }

[lints]
workspace = true
