[package]
name = "carbide-machine-a-tron"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "machine_a_tron"

[[bin]]
name = "machine-a-tron"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["derive", "env"], workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
uuid = { features = ["v4"], workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
crossterm = { features = ["event-stream"], workspace = true }
ratatui = { workspace = true }
mac_address = { workspace = true }
futures = { workspace = true }
figment = { features = ["toml"], workspace = true }
libredfish = { workspace = true }
reqwest = { default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "socks",
  "multipart",
], workspace = true }
eyre = { workspace = true }
tempfile = { workspace = true }
duration-str = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
russh = { workspace = true }

# [local-dependencies]
carbide-rpc = { path = "../rpc" }
bmc-mock = { path = "../bmc-mock" }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
carbide-uuid = { path = "../uuid" }

[dev-dependencies]
toml = { workspace = true }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
