[package]
name = "carbide-machine-validation"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "machine_validation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

carbide-uuid = { path = "../uuid" }

tokio = { features = ["full"], workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { default-features = false, workspace = true }
carbide-tls = { path = "../tls" }
carbide-rpc = { path = "../rpc" }
carbide-utils = { path = "../utils" }
tonic = { workspace = true }
chrono = { features = ["serde"], workspace = true }
tracing = { workspace = true }
reqwest = { default-features = false, features = [
  "rustls-tls",
  "stream",
], workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
