[package]
name = "carbide-mlxconfig-profile"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Profile-based configuration management via mlxconfig."

[lib]
name = "mlxconfig_profile"

[dependencies]
carbide-mlxconfig-variables = { path = "../mlxconfig-variables" }
carbide-mlxconfig-registry = { path = "../mlxconfig-registry" }
carbide-mlxconfig-runner = { path = "../mlxconfig-runner" }
carbide-rpc = { path = "../rpc" }
serde = { features = ["derive"], workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
